--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
     <div class="row">
       <div class="col">
         <h2>Column 1</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, aliquam. Iste est excepturi saepe. Voluptate?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt nobis sapiente magni cupiditate, itaque optio perferendis rerum eaque eveniet recusandae quae. Sunt, nesciunt quaerat perferendis alias nobis facilis. Nostrum, ut.</p>
       </div>
       <div class="col">
         <h2>Column 2</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, odio nemo atque vitae blanditiis assumenda.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ipsum magni, adipisci provident repellat cupiditate iusto. Ratione consequatur nam ab ex necessitatibus voluptatibus inventore, maxime, accusantium id neque architecto aspernatur.</p>
       </div>
       <div class="col">
         <h2>Column 3</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis officiis porro soluta, nam ipsa nesciunt?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex voluptate impedit nam in provident temporibus sed officia, animi natus recusandae reiciendis sunt corporis quidem laborum ad nesciunt eaque eos quod!</p>
       </div>
     </div>
   </div>
   <div class="container">
     <!-- Content here -->
-    <div class="row row-cols-1 row-cols-md-4 g-4">
+    <div class="row row-cols-1 row-cols-md-4 g-4 mt-5">
       <div class="col">
-        <div class="card bg-primary">
+        <div class="card bg-primary mt#">
           <div class="card-body text-center">
             <h6 class="card-text">First Card</h6>
           </div>
@@ -75,7 +75,7 @@
       </div>
     </div>
   </div>
-  <div class="p-2 fixed-bottom bg-info d-flex justify-content-center align-items-center text-dark mb-0">
+  <div class="p-3 fixed-bottom bg-info d-flex justify-content-center align-items-center text-dark mb-0">
     <h5>Footer</h5>
   </div>
 </body>
