--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </ul>
   
   <div class="container mt-5 mb-5">
-    <div class="row">
+    <div class="row row-cols-md-3">
       <div class="col">
         <h2>Column 1</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt nobis sapiente magni cupiditate, itaque optio perferendis rerum eaque eveniet recusandae quae. Sunt, nesciunt quaerat perferendis alias nobis facilis. Nostrum, ut.</p>
@@ -42,8 +42,9 @@
       </div>
     </div>
   </div>
-  <div class="container">
-    <!-- Content here -->
+
+  <!-- Card-Section -->
+  <div class="container mb-5">
     <div class="row row-cols-1 row-cols-md-4 g-4 mt-5">
       <div class="col">
         <div class="card bg-primary mt#">
@@ -75,8 +76,9 @@
       </div>
     </div>
   </div>
-  <div class="p-3 fixed-bottom bg-info d-flex justify-content-center align-items-center text-dark mb-0">
-    <h5>Footer</h5>
+  <!-- Footer -->
+  <div class="p-4 position-relative bg-info text-dark ">
+    <div class="position-absolute bottom-0 start-50 translate-middle-x"><h5 class="pt-2">Footer</h5></div>
   </div>
 </body>
 </html>
