Auf gabe ist gelöst

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
   </div>
   <!-- Footer -->
-  <div class="p-4 position-relative bg-info text-dark ">
+  <div class="p-4 position-relative bg-info text-dark mb-0">
     <div class="position-absolute bottom-0 start-50 translate-middle-x"><h5 class="pt-2">Footer</h5></div>
   </div>
 </body>
