Auf gabe ist gelöst

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
   </ul>
   
   <div class="container mt-5 mb-5">
-    <div class="row row-cols-md-3">
-      <div class="col">
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-lg-4">
         <h2>Column 1</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt nobis sapiente magni cupiditate, itaque optio perferendis rerum eaque eveniet recusandae quae. Sunt, nesciunt quaerat perferendis alias nobis facilis. Nostrum, ut.</p>
       </div>
-      <div class="col">
+      <div class="col-sm-12 col-md-6 col-lg-4">
         <h2>Column 2</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ipsum magni, adipisci provident repellat cupiditate iusto. Ratione consequatur nam ab ex necessitatibus voluptatibus inventore, maxime, accusantium id neque architecto aspernatur.</p>
       </div>
-      <div class="col">
+      <div class="col-sm-12 col-md-6 col-lg-4">
         <h2>Column 3</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex voluptate impedit nam in provident temporibus sed officia, animi natus recusandae reiciendis sunt corporis quidem laborum ad nesciunt eaque eos quod!</p>
       </div>
