Aufgabe ist gemacht

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     </div>
   </div>
   <!-- Footer -->
-  <div class="p-4 position-relative bg-info text-dark mb-0">
-    <div class="position-absolute bottom-0 start-50 translate-middle-x mb-0"><h5 class="pt-2">Footer</h5></div>
+  <div class="p-3 position-sticky w-100 bottom-0 bg-info text-dark mb-0 text-center">
+    <h5>Footer</h5>
   </div>
 </body>
 </html>
